# gears-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml
.agents/skills/cypilot/: SKILL.md
.agents/skills/cypilot-analyze/: SKILL.md
.agents/skills/cypilot-generate/: SKILL.md
.agents/skills/cypilot-migrate-openspec/: SKILL.md
.agents/skills/cypilot-plan/: SKILL.md
.agents/skills/cypilot-pr-review/: SKILL.md
.agents/skills/cypilot-pr-status/: SKILL.md
.agents/skills/cypilot-workspace/: SKILL.md
.cf-studio/: version.toml  whatsnew.toml
.cf-studio/config/: core.toml
.claude/agents/: cypilot-codegen.md  cypilot-phase-compiler.md  cypilot-phase-runner.md  cypilot-pr-review.md  cypilot-ralphex.md
.claude/skills/cypilot/: SKILL.md
.claude/skills/cypilot-analyze/: SKILL.md
.claude/skills/cypilot-generate/: SKILL.md
.claude/skills/cypilot-migrate-openspec/: SKILL.md
.claude/skills/cypilot-plan/: SKILL.md
.claude/skills/cypilot-pr-review/: SKILL.md
.claude/skills/cypilot-pr-status/: SKILL.md
.claude/skills/cypilot-workspace/: SKILL.md
.codex/agents/: cypilot-codegen.toml  cypilot-phase-compiler.toml  cypilot-phase-runner.toml  cypilot-pr-review.toml  cypilot-ralphex.toml
.cursor/agents/: cypilot-codegen.md  cypilot-phase-compiler.md  cypilot-phase-runner.md  cypilot-pr-review.md  cypilot-ralphex.md
.cursor/commands/: cypilot-analyze.md  cypilot-generate.md  cypilot-migrate-openspec.md  cypilot-plan.md  cypilot-pr-review.md  cypilot-pr-status.md  cypilot-workspace.md  cypilot.md
.cypilot/.core/: whatsnew.toml
.cypilot/.core/requirements/: agent-compliance.md  language-complexity.md  plan-decomposition.md  prompt-bug-finding.md  prompt-engineering.md  raw-input-overflow.md  storytelling-export.md  storytelling-modes.md  storytelling-phases.md  storytelling-preferences.md  storytelling.md
.cypilot/.core/schemas/: artifacts.schema.json  core-config.schema.json
.cypilot/.core/workflows/: analyze.md  generate.md  plan.md  workspace.md
.cypilot/.gen/: AGENTS.md
.cypilot/config/: core.toml
.github/: copilot-instructions.md
.github/agents/: cypilot-codegen.agent.md  cypilot-phase-compiler.agent.md  cypilot-phase-runner.agent.md  cypilot-pr-review.agent.md  cypilot-ralphex.agent.md
.github/prompts/: cypilot-analyze.prompt.md  cypilot-generate.prompt.md  cypilot-migrate-openspec.prompt.md  cypilot-plan.prompt.md  cypilot-pr-review.prompt.md  cypilot-pr-status.prompt.md  cypilot-workspace.prompt.md  cypilot.prompt.md
.github/workflows/: ci.yml  clippy-nightly.yml  code-ranker.yml  release-plz.yml
apps/cf-gears-example-server/: Cargo.toml
apps/cf-gears-example-server/src/: registered_gears.rs
config/: chat-engine-dev.yaml  e2e-local.yaml  e2e-tr-authz.yaml  quickstart.yaml
docs/: TESTING.md
docs/api/: api.json
docs/md-fabric/: README.md
docs/security/: SECURITY.md
docs/web-docs/: index.mdx
docs/web-docs/build-with-gears/: add-a-database.md  add-authorization.md  add-observability.md  add-pagination-odata.md  cargo-gears-cli.md  configure.md  deploy.md  examples.md  gear-anatomy.md  index.md  integrate-existing-platform.md  out-of-process.md  test-your-gear.md  use-existing-gears.md  your-first-gear.mdx
docs/web-docs/capabilities/: cross-cutting-features.md  index.md  service-gears.md  status-and-roadmap.md  system-gears.md  toolkit.md
docs/web-docs/concepts/: api-gateway-openapi.md  compliance-and-fips.md  deployment-shapes.md  error-model.md  errors-and-types.md  gears-and-composition.mdx  index.md  licensing-usage-quotas.md  plugins-and-extension-points.md  request-path.md  runtime-and-lifecycle.md  sdk-and-clienthub.md  secure-data-path.md  security-and-tenancy.md  testing-model.md  type-system-gts.md
docs/web-docs/contribute/: add-or-change-a-gear.md  architecture-and-quality-gates.md  code-contribution-guide.md  development-setup.md  documentation.md  index.md  release-process.md  spec-driven-workflow.md  translation-guide.md
docs/web-docs/introduction/: glossary.md  index.md  spec-driven-ai-native.md  where-gears-fits.md  why-gears.md
examples/toolkit/users-info/users-info/: Cargo.toml
gears/chat-engine/chat-engine/: Cargo.toml
gears/chat-engine/docs/: DESIGN.md  PRD.md
gears/credstore/credstore/: Cargo.toml
gears/credstore/credstore-sdk/: Cargo.toml
gears/file-storage/: README.md
gears/file-storage/docs/: DECOMPOSITION.md  DESIGN.md  IMPLEMENTATION_PLAN_TEMP.txt  PRD.md  api.md  migration.sql
gears/file-storage/file-storage/: Cargo.toml
gears/file-storage/file-storage-sdk/: Cargo.toml  README.md
gears/file-storage/file-storage-sdk/src/: api.rs  api_tests.rs  gts.rs  gts_tests.rs  lib.rs  models.rs  models_tests.rs
gears/mini-chat/mini-chat/: Cargo.toml
gears/mini-chat/mini-chat-sdk/: Cargo.toml
gears/simple-user-settings/simple-user-settings/: Cargo.toml
gears/simple-user-settings/simple-user-settings-sdk/: Cargo.toml
gears/system/api-gateway/: Cargo.toml
gears/system/cluster/cluster/: Cargo.toml
gears/system/gear-orchestrator/: Cargo.toml
gears/system/usage-collector/plugins/noop-usage-collector-plugin/: Cargo.toml
libs/modkit-canonical-errors/src/: problem.rs
libs/rustls-fips-shim/: Cargo.toml
libs/toolkit/: Cargo.toml
libs/toolkit-auth/: Cargo.toml
libs/toolkit-db/: Cargo.toml
libs/toolkit-db/src/: contention.rs
libs/toolkit-gts-macros/: Cargo.toml
libs/toolkit-http/: Cargo.toml
libs/toolkit-macros-tests/: Cargo.toml
libs/toolkit-macros-tests/tests/ui/fail/: lifecycle_entry_not_found.rs
libs/toolkit-odata/: Cargo.toml
libs/toolkit-sdk/: Cargo.toml
libs/toolkit-security/: Cargo.toml
tools/dylint_lints/: Cargo.toml
tools/dylint_lints/de02_api_layer/de0205_operation_builder/: Cargo.toml
tools/dylint_lints/de02_api_layer/de0205_operation_builder/src/: lib.rs
tools/dylint_lints/de02_api_layer/de0205_operation_builder/ui/: invalid_tag_format.rs  invalid_tag_format.stderr  missing_tag.rs  missing_tag.stderr  valid_operation.rs
tools/scripts/: check_packaging_metadata.py  coverage.py  make_help.py  md-fabric.py  md-fabric.toml
(+346 files in other folders)
