[package]
name = "cf-gears-simple-user-settings"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Simple settings module"
repository.workspace = true
readme = "README.md"
keywords = ["constructorfabric", "cf-gears"]
categories = ["web-programming"]

[lib]
name = "simple_user_settings"

[lints]
workspace = true

[dependencies]
simple-user-settings-sdk = { package = "cf-gears-simple-user-settings-sdk", version = "0.1.0", path = "../simple-user-settings-sdk" }

# AuthZ resolver for authorization (PEP flow)
authz-resolver-sdk = { package = "cf-gears-authz-resolver-sdk", path = "../../../gears/system/authz-resolver/authz-resolver-sdk" }

anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true, features = ["macros"] }
uuid = { workspace = true }
# Database - SeaORM (driver features come from toolkit-db)
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
thiserror = { workspace = true }

toolkit = { workspace = true }
toolkit-db = { workspace = true, features = ["sqlite"] }
toolkit-db-macros = { workspace = true }
toolkit-canonical-errors = { workspace = true, features = ["axum"] }
toolkit-security = { workspace = true }
toolkit-macros = { workspace = true }
